--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
     "moment": "2.29.4",
+    "mongoose": "^8.0.1",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.1.0",
@@ -42,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Prototipo de Alta fidelidad: https://www.figma.com/proto/Ssf6UFJlE97BQ5sqbsGTLl/Pagina-web-Book-your-Hotel?page-id=0%3A1&type=design&node-id=11-4&viewport=-5%2C378%2C0.16&t=65fONeStqTV1Abg6-1&scaling=min-zoom&starting-point-node-id=11%3A4&mode=design",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
